@@ -55,6 +55,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|ArrayList
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|Date
 import|;
 end_import
@@ -65,7 +75,27 @@ name|java
 operator|.
 name|util
 operator|.
+name|HashMap
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Map
 import|;
 end_import
 
@@ -265,39 +295,11 @@ name|org
 operator|.
 name|codehaus
 operator|.
-name|jettison
+name|jackson
 operator|.
-name|json
+name|map
 operator|.
-name|JSONArray
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|codehaus
-operator|.
-name|jettison
-operator|.
-name|json
-operator|.
-name|JSONException
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|codehaus
-operator|.
-name|jettison
-operator|.
-name|json
-operator|.
-name|JSONObject
+name|ObjectMapper
 import|;
 end_import
 
@@ -345,6 +347,11 @@ specifier|private
 name|PrintStream
 name|out
 decl_stmt|;
+comment|// for JSON encoding
+specifier|private
+name|ObjectMapper
+name|mapper
+decl_stmt|;
 comment|/**    * Basic constructor that simply initializes values to reasonable defaults.    */
 specifier|public
 name|HLogPrettyPrinter
@@ -384,6 +391,12 @@ operator|=
 name|System
 operator|.
 name|out
+expr_stmt|;
+name|mapper
+operator|=
+operator|new
+name|ObjectMapper
+argument_list|()
 expr_stmt|;
 block|}
 comment|/**    * Fully specified constructor.    *     * @param outputValues    *          when true, enables output of values along with other log    *          information    * @param outputJSON    *          when true, enables output in JSON format rather than a    *          "pretty string"    * @param sequence    *          when nonnegative, serves as a filter; only log entries with this    *          sequence id will be printed    * @param region    *          when not null, serves as a filter; only log entries from this    *          region will be printed    * @param row    *          when not null, serves as a filter; only log entries from this row    *          will be printed    * @param persistentOutput    *          keeps a single list running for multiple files. if enabled, the    *          endPersistentOutput() method must be used!    * @param out    *          Specifies an alternative to stdout for the destination of this     *          PrettyPrinter's output.    */
@@ -762,17 +775,18 @@ name|getEdit
 argument_list|()
 decl_stmt|;
 comment|// begin building a transaction structure
-name|JSONObject
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|txn
 init|=
-operator|new
-name|JSONObject
-argument_list|(
 name|key
 operator|.
 name|toStringMap
 argument_list|()
-argument_list|)
 decl_stmt|;
 comment|// check output filters
 if|if
@@ -822,11 +836,17 @@ argument_list|)
 condition|)
 continue|continue;
 comment|// initialize list into which we will store atomic actions
-name|JSONArray
+name|List
+argument_list|<
+name|Map
+argument_list|>
 name|actions
 init|=
 operator|new
-name|JSONArray
+name|ArrayList
+argument_list|<
+name|Map
+argument_list|>
 argument_list|()
 decl_stmt|;
 for|for
@@ -841,11 +861,21 @@ argument_list|()
 control|)
 block|{
 comment|// add atomic operation to txn
-name|JSONObject
+name|Map
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 name|op
 init|=
 operator|new
-name|JSONObject
+name|HashMap
+argument_list|<
+name|String
+argument_list|,
+name|Object
+argument_list|>
 argument_list|(
 name|kv
 operator|.
@@ -874,6 +904,7 @@ argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
+comment|// check row output filter
 if|if
 condition|(
 name|row
@@ -899,7 +930,7 @@ argument_list|)
 condition|)
 name|actions
 operator|.
-name|put
+name|add
 argument_list|(
 name|op
 argument_list|)
@@ -909,7 +940,7 @@ if|if
 condition|(
 name|actions
 operator|.
-name|length
+name|size
 argument_list|()
 operator|==
 literal|0
@@ -946,11 +977,17 @@ argument_list|(
 literal|","
 argument_list|)
 expr_stmt|;
+comment|// encode and print JSON
 name|out
 operator|.
 name|print
 argument_list|(
+name|mapper
+operator|.
+name|writeValueAsString
+argument_list|(
 name|txn
+argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
@@ -965,7 +1002,7 @@ literal|"Sequence "
 operator|+
 name|txn
 operator|.
-name|getLong
+name|get
 argument_list|(
 literal|"sequence"
 argument_list|)
@@ -976,7 +1013,7 @@ literal|"from region "
 operator|+
 name|txn
 operator|.
-name|getString
+name|get
 argument_list|(
 literal|"region"
 argument_list|)
@@ -987,7 +1024,7 @@ literal|"in table "
 operator|+
 name|txn
 operator|.
-name|getString
+name|get
 argument_list|(
 literal|"table"
 argument_list|)
@@ -1004,19 +1041,19 @@ name|i
 operator|<
 name|actions
 operator|.
-name|length
+name|size
 argument_list|()
 condition|;
 name|i
 operator|++
 control|)
 block|{
-name|JSONObject
+name|Map
 name|op
 init|=
 name|actions
 operator|.
-name|getJSONObject
+name|get
 argument_list|(
 name|i
 argument_list|)
@@ -1036,7 +1073,7 @@ literal|"    row: "
 operator|+
 name|op
 operator|.
-name|getString
+name|get
 argument_list|(
 literal|"row"
 argument_list|)
@@ -1050,7 +1087,7 @@ literal|"    column: "
 operator|+
 name|op
 operator|.
-name|getString
+name|get
 argument_list|(
 literal|"family"
 argument_list|)
@@ -1059,7 +1096,7 @@ literal|":"
 operator|+
 name|op
 operator|.
-name|getString
+name|get
 argument_list|(
 literal|"qualifier"
 argument_list|)
@@ -1075,9 +1112,12 @@ operator|(
 operator|new
 name|Date
 argument_list|(
+operator|(
+name|Long
+operator|)
 name|op
 operator|.
-name|getLong
+name|get
 argument_list|(
 literal|"timestamp"
 argument_list|)
@@ -1106,18 +1146,6 @@ expr_stmt|;
 block|}
 block|}
 block|}
-block|}
-catch|catch
-parameter_list|(
-name|JSONException
-name|e
-parameter_list|)
-block|{
-name|e
-operator|.
-name|printStackTrace
-argument_list|()
-expr_stmt|;
 block|}
 finally|finally
 block|{
